tests/rustdoc-ui/intra-doc/feature-gate-intra-doc-arg.stderr
error[E0658]: `arg@` disambiguators are experimental
  --> $DIR/feature-gate-intra-doc-arg.rs:3:12
   |
LL | /// Hello [arg@x]
   |            ^^^^^
   |
   = help: add `#![feature(intra_doc_arg)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
