tests/rustdoc-ui/intra-doc/feature-gate-intra-doc-arg.rs
#![deny(rustdoc::broken_intra_doc_links)]

/// Hello [arg@x]
//~^ ERROR `arg@` disambiguators are experimental
pub fn a(x: ()) {}
